1. Health check endpoint 2. Utils package

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,8 @@ ENV=dev
 WEB_PORT=8080
 CORS_ORIGINS=*           # comma-separated list of allowed origins
 ENABLE_SWAGGER=true
-REQUEST_TIMEOUT=5s       # duration in Go format: 5s, 1m, etc.
+READ_TIMEOUT=5s       # duration in Go format: 5s, 1m, etc.
+WRITE_TIMEOUT=10s    # duration in Go format: 5s, 1m, etc.
 
 # -------------------------------
 # Database Configuration
