Folder stucture updates, and CRUD operatiosn for product

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ WRITE_TIMEOUT=10s    # duration in Go format: 5s, 1m, etc.
 # Database Configuration
 # -------------------------------
 DB_CONNECTION_STRING=postgres://user:password@localhost:5432/mydb?sslmode=disable
-
+DB_RETRY_COUNT=5
 # -------------------------------
 # Cache / Redis Configuration
 # -------------------------------
