Migrations and seed

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # -------------------------------
 # Web Server Configuration
 # -------------------------------
-ENV=dev
+ENV=local
 WEB_PORT=8080
 CORS_ORIGINS=*           # comma-separated list of allowed origins
 ENABLE_SWAGGER=true
@@ -11,8 +11,13 @@ WRITE_TIMEOUT=10s    # duration in Go format: 5s, 1m, etc.
 # -------------------------------
 # Database Configuration
 # -------------------------------
-DB_CONNECTION_STRING=postgres://user:password@localhost:5432/mydb?sslmode=disable
+
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=rest_api_poc_db
+POSTGRES_PORT=5432
 DB_RETRY_COUNT=5
+DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/rest_api_poc_db?sslmode=disable
 # -------------------------------
 # Cache / Redis Configuration
 # -------------------------------
