Logger is fixed and cors is added

--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,11 @@
 # Web Server Configuration
 # -------------------------------
 ENV=local
-WEB_PORT=8080
-CORS_ORIGINS=*           # comma-separated list of allowed origins
+WEB_PORT=8080        # comma-separated list of allowed origins
 ENABLE_SWAGGER=true
 READ_TIMEOUT=5s       # duration in Go format: 5s, 1m, etc.
 WRITE_TIMEOUT=10s    # duration in Go format: 5s, 1m, etc.
-
+CORS_ORIGINS=http://localhost:3000
 # -------------------------------
 # Database Configuration
 # -------------------------------
