Redis implementation for auth

--- a/.env.example
+++ b/.env.example
@@ -21,10 +21,12 @@ DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5432/rest_api_poc_db
 # Cache / Redis Configuration
 # -------------------------------
 ENABLE_CACHE=false
-REDIS_ADDRESS=localhost:6379
 REDIS_PASSWORD=        # leave empty if no password
 REDIS_DB=0
 REDIS_TTL=1h           # TTL for cache entries, in Go duration format
+REDIS_PORT=6379
+REDIS_MAXMEMORY=256mb
+REDIS_EVICTION_POLICY=volatile-lfu
 
 # -------------------------------
 # Authentication / JWT
