--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,17 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:7-alpine
+    container_name: redis_cache
+    restart: unless-stopped
+    ports:
+      - "${REDIS_PORT:-6379}:6379"
+    # Enforce memory limit + evict least-frequently-used TTL keys (good for cache workloads)
+    command: ["redis-server","--maxmemory","${REDIS_MAXMEMORY:-256mb}","--maxmemory-policy","${REDIS_EVICTION_POLICY:-volatile-lfu}"]
+    networks:
+      - app-network
+
 volumes:
   postgres_data:
 
